--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -3,15 +3,15 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-
+    
     <div class="section">
         <div class="padTable">
+            <a class="main-helplink" href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
             <p>
                 $T('explain-catTags') $T('explain-catTags2')<br/>
             </p>
-            <div class="field-pair">
-                <h5 class="darkred nomargin">$T('explain-relFolder'): <span class="path">$defdir</span></h5>
-            </div>
+            <h5 class="darkred"><strong>$T('explain-relFolder'):</strong> <span class="path">$defdir</span></h5>
+            
 
           <!--#set $odd = False#-->
           <!--#set $cur = 0#-->
