--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -16,7 +16,7 @@
                 <div class="field-pair">
                     <h5 class="darkred nomargin">$T('base-folder'): <span class="path">$my_home</span></h5>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="download_dir">$T('opt-download_dir')</label>
                     <input type="text" name="download_dir" id="download_dir" value="$download_dir" />
                     <span class="desc">$T('explain-download_dir')</span>
@@ -26,7 +26,7 @@
                     <input type="text" name="download_free" id="download_free" value="$download_free" class="smaller_input"  />
                     <span class="desc">$T('explain-download_free')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="complete_dir">$T('opt-complete_dir')</label>
                     <input type="text" name="complete_dir" id="complete_dir" value="$complete_dir" />
                     <span class="desc">$T('explain-complete_dir')</span>
@@ -38,7 +38,7 @@
                     <span class="desc">$T('explain-permissions')</span>
                 </div>
                 <!--#end if#-->
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="dirscan_dir">$T('opt-dirscan_dir')</label>
                     <input type="text" name="dirscan_dir" id="dirscan_dir" value="$dirscan_dir" />
                     <span class="desc">$T('explain-dirscan_dir')</span>
@@ -48,7 +48,7 @@
                     <input type="number" name="dirscan_speed" id="dirscan_speed" value="$dirscan_speed"  min="0" max="3600" />
                     <span class="desc">$T('explain-dirscan_speed')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="script_dir">$T('opt-script_dir')</label>
                     <input type="text" name="script_dir" id="script_dir" value="$script_dir" />
                     <span class="desc">$T('explain-script_dir')</span>
@@ -58,7 +58,7 @@
                     <input type="text" name="email_dir" id="email_dir" value="$email_dir" />
                     <span class="desc">$T('explain-email_dir')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="password_file">$T('opt-password_file')</label>
                     <input type="text" name="password_file" id="password_file" value="$password_file" />
                     <span class="desc">$T('explain-password_file')</span>
@@ -82,7 +82,7 @@
                 <div class="field-pair">
                     <h5 class="darkred nomargin">$T('base-folder'): <span class="path">$my_lcldata</span></h5>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="admin_dir">$T('opt-admin_dir')</label>
                     <input type="text" name="admin_dir" id="admin_dir" value="$admin_dir" />
                     <span class="desc">$T('explain-admin_dir1')</span>
@@ -93,7 +93,7 @@
                     <input type="text" name="log_dir" id="log_dir" value="$log_dir" />
                     <span class="desc">$T('explain-log_dir')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="nzb_backup_dir">$T('opt-nzb_backup_dir')</label>
                     <input type="text" name="nzb_backup_dir" id="nzb_backup_dir" value="$nzb_backup_dir" />
                     <span class="desc">$T('explain-nzb_backup_dir')</span>
