--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -16,7 +16,7 @@
         </div><!-- /col2 -->
         <div class="col1">
             <fieldset>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="enable">$T('srv-enable')</label>
                     <input type="checkbox" name="enable" id="enable" value="1" checked="checked" />
                     <span class="desc">$T('srv-enable')</span>
@@ -25,7 +25,7 @@
                     <label class="config" for="host">$T('srv-host')</label>
                     <input type="text" name="host" id="host" />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="port">$T('srv-port')</label>
                     <input type="number" name="port" id="port" size="8" />
                 </div>
@@ -33,7 +33,7 @@
                     <label class="config" for="username">$T('srv-username')</label>
                     <input type="text" name="username" id="username" />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="password">$T('srv-password')</label>
                     <input type="text" name="password" id="password" />
                 </div>
@@ -41,7 +41,7 @@
                     <label class="config" for="connections">$T('srv-connections')</label>
                     <input type="number" name="connections" id="connections" min="0" max="100" />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="priority">$T('srv-priority')</label>
                     <input type="number" name="priority" id="priority" min="0" max="100" /> <i>$T('explain-svrprio')</i>
                 </div>
@@ -53,7 +53,7 @@
                     <label class="config" for="timeout">$T('srv-timeout')</label>
                     <input type="number" name="timeout" id="timeout" min="30" /> <i>$T('seconds')</i>
                 </div>
-                <div class="field-pair alt <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
                     <label class="config" for="ssl">$T('srv-ssl')</label>
                     <input type="checkbox" name="ssl" id="ssl" value="1" <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
                     <span class="desc">$T('srv-ssl')</span>
@@ -89,7 +89,7 @@
                     <input type="checkbox" name="send_group" id="send_group" value="1" />
                     <span class="desc">$T('srv-explain-send_group')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="optional">$T('srv-optional')</label>
                     <input type="checkbox" name="optional" id="optional" value="1" />
                     <span class="desc">$T('srv-optional')</span>
@@ -103,7 +103,7 @@
                     </select>
                     <span class="desc">$T('srv-explain-categories')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="displayname">$T('srv-displayname')</label>
                     <input type="text" name="displayname" id="displayname" />
                 </div>
@@ -142,7 +142,7 @@
         </div><!-- /col2 -->
         <div class="col1"  style="display:none;">
             <fieldset>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="enable$cur">$T('srv-enable')</label>
                     <input type="checkbox" name="enable" id="enable$cur" value="1" <!--#if int($server['enable']) != 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('srv-enable')</span>
@@ -151,7 +151,7 @@
                     <label class="config" for="host$cur">$T('srv-host')</label>
                     <input type="text" name="host" id="host$cur" value="$server['host']" />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="port$cur">$T('srv-port')</label>
                     <input type="number" name="port" id="port$cur" value="$server['port']" size="8" />
                 </div>
@@ -159,7 +159,7 @@
                     <label class="config" for="username$cur">$T('srv-username')</label>
                     <input type="text" name="username" id="username$cur" value="$server['username']" />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="password$cur">$T('srv-password')</label>
                     <input type="text" name="password" id="password$cur" value="$server['password']" />
                 </div>
@@ -171,7 +171,7 @@
                     <label class="config" for="priority$cur">$T('srv-priority')</label>
                     <input type="number" name="priority" id="priority$cur" value="$server['priority']" min="0" max="100" /> <i>$T('explain-svrprio')</i>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="retention$cur">$T('srv-retention')</label>
                     <input type="number" name="retention" id="retention$cur" value="$server['retention']" min="0" /> <i>$T('days')</i>
                 </div>
@@ -179,7 +179,7 @@
                     <label class="config" for="timeout$cur">$T('srv-timeout')</label>
                     <input type="number" name="timeout" id="timeout$cur" value="$server['timeout']" min="30" /> <i>$T('seconds')</i>
                 </div>
-                <div class="field-pair alt <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
+                <div class="field-pair <!--#if int($have_ssl) == 0 then "disabled" else ""#-->">
                     <label class="config" for="ssl$cur">$T('srv-ssl')</label>
                     <input type="checkbox" name="ssl" id="ssl$cur" value="1" <!--#if int($server['ssl']) != 0 and int($have_ssl) == 1 then 'checked="checked"' else ""#--> <!--#if int($have_ssl) == 0 then "disabled=\"disabled\"" else ""#--> />
                     <span class="desc">$T('srv-ssl')</span>
@@ -215,7 +215,7 @@
                     <input type="checkbox" name="optional" id="optional$cur" value="1" <!--#if int($server['optional']) != 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('srv-optional')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="send_group$cur">$T('srv-send_group')</label>
                     <input type="checkbox" name="send_group" id="send_group$cur" value="1" <!--#if int($server['send_group']) != 0 then 'checked="checked"' else ""#--> />
                     <span class="desc">$T('srv-explain-send_group')</span>
@@ -229,7 +229,7 @@
                     </select>
                     <span class="desc">$T('srv-explain-categories')</span>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="displayname$cur">$T('srv-displayname')</label>
                     <input type="text" name="displayname" id="displayname$cur" value="$server['displayname']" />
                 </div>
