--- a/interfaces/Config/templates/config_sorting.tmpl
+++ b/interfaces/Config/templates/config_sorting.tmpl
@@ -23,7 +23,7 @@
                 <div class="field-pair">
                     <h5 class="darkred nomargin">$T('ft-download'): <span class="path">$complete_dir</span></h5>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config wide" for="enable_tv_sorting">$T('opt-tvsort')</label>
                     <input type="checkbox" name="enable_tv_sorting" id="enable_tv_sorting" value="1" <!--#if int($enable_tv_sorting) > 0 then 'checked="checked"' else ""#--> />
                 </div>
@@ -32,7 +32,7 @@
                     <input type="text" id="tvfoldername" name="tv_sort_string" value="$tv_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config">$T('presetSort')</label>
                     <div class="presets float-left">
                         <input type="button" onclick="tvSet('%sn/Season %s/%sn - %sx%0e - %en.%ext')" value="$T('button-Season1x05')" />
@@ -175,7 +175,7 @@
                 <div class="field-pair">
                     <h5 class="darkred nomargin">$T('ft-download'): <span class="path">$complete_dir</span></h5>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config wide" for="enable_movie_sorting">$T('opt-movieSort')</label>
                     <input type="checkbox" name="enable_movie_sorting" id="enable_movie_sorting" value="1" <!--#if int($enable_movie_sorting) > 0 then 'checked="checked"' else ""#--> />
                 </div>
@@ -183,7 +183,7 @@
                     <label class="config wide" for="movie_extra_folder">$T('opt-movieExtra')</label>
                     <input type="checkbox" name="movie_extra_folder" id="movie_extra_folder" value="1" <!--#if int($movie_extra_folder) > 0 then 'checked="checked"' else ""#--> />
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config" for="moviefoldername">$T('sortString')</label>
                     <input type="text" name="movie_sort_string" id="moviefoldername" value="$movie_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
@@ -193,7 +193,7 @@
                     <input type="text" name="movie_sort_extra" id="movieextra" value="$movie_sort_extra" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config">$T('presetSort')</label>
                     <div class="presets float-left">
                         <input type="button" onclick="movieSet('%title (%y)/%title (%y).%ext',' CD%1');movieExtraFolder(false)" value="$T('button-inFolders')" />
@@ -314,7 +314,7 @@
                 <div class="field-pair">
                     <h5 class="darkred nomargin">$T('ft-download'): <span class="path">$complete_dir</span></h5>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config wide" for="enable_date_sorting">$T('opt-dateSort')</label>
                     <input type="checkbox" name="enable_date_sorting" id="enable_date_sorting" value="1" <!--#if int($enable_date_sorting) > 0 then 'checked="checked"' else ""#--> />
                 </div>
@@ -323,7 +323,7 @@
                     <input type="text" name="date_sort_string" id="datefoldername" value="$date_sort_string" />
                     <button class="btn btn-default clearBtn" type="button" class="clearBtn"><span class="glyphicon glyphicon-remove"></span> $T('button-clear')</button>
                 </div>
-                <div class="field-pair alt">
+                <div class="field-pair">
                     <label class="config">$T('presetSort')</label>
                     <div class="presets float-left">
                         <input type="button" onclick="dateSet('%t/%t - %y-%0m-%0d - %desc.%ext')" value="$T('button-ShowNameF')" />
