--- a/interfaces/Config/templates/_inc_header_uc.tmpl
+++ b/interfaces/Config/templates/_inc_header_uc.tmpl
@@ -224,9 +224,9 @@
                 <span class="icon-bar"></span>
             </button>
             <!--#if $active_lang in ('pl', 'es', 'ru', 'sr', 'fi') #-->
-            <a class="navbar-brand navbar-brand-small" href="${root}"><img src="${root}staticcfg/images/logo-small.png" width="47" height="45" id="logo" alt="[home]" /></a>
+            <a class="navbar-brand navbar-brand-small" href="${root}" title="$T('Home')"><img src="${root}staticcfg/images/logo-small.png" width="47" height="45" id="logo" alt="$T('Home')" /></a>
             <!--#else#-->
-            <a class="navbar-brand" href="${root}"><img src="${root}staticcfg/images/logo.png" width="120" height="45" id="logo" alt="[home]" /></a>
+            <a class="navbar-brand" href="${root}" title="$T('Home')"><img src="${root}staticcfg/images/logo.png" width="120" height="45" id="logo" alt="$T('Home')" /></a>
             <!--#end if#-->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
