--- a/interfaces/Config/templates/config_special.tmpl
+++ b/interfaces/Config/templates/config_special.tmpl
@@ -17,7 +17,7 @@
             <!--#set $odd = False#-->
             <!--#for $option in $switches#-->
                 <!--#set $odd = not $odd#-->
-                <div class="field-pair <!--#if $odd then "alt" else ""#-->">
+                <div class="field-pair">
                     <label class="config wide" for="$option[0]">
                         $option[0] ( <span class="path"><!--#if $option[2] then $T('on') else $T('off')#--></span> ) 
                         <!--#if $option[1] != $option[2] then '<span class="glyphicon glyphicon-asterisk"></span>' else ''#-->
@@ -42,7 +42,7 @@
             <!--#set $odd = False#-->
             <!--#for $option in $entries#-->
                 <!--#set $odd = not $odd#-->
-                <div class="field-pair <!--#if $odd then "alt" else ""#-->">
+                <div class="field-pair">
                     <label class="config narrow" for="$option[0]">$option[0] (&nbsp;<span class="path">$option[2]</span>&nbsp;)</label>
                     <input type="text" name="$option[0]" id="$option[0]" value="$option[1]" />
                     <!--#if ($option[1] != $option[2]) and ($option[2] != "") then '<span class="glyphicon glyphicon-asterisk"></span>' else ''#-->
